# second-site

./: .gitignore  .invenio  Pipfile  README.md  celerybeat-schedule.db  docker-compose.full.yml  docker-services.yml  invenio.cfg  notes.txt  pyproject.toml
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
lxc/bookworm/: create_container.sh  lxc_config.conf
lxc/bookworm/opensearch/: build.sh  build_data_node.sh
lxc/bookworm/opensearch/config/single-node/: #opensearch.yml#  .#opensearch.yml  opensearch.yml
lxc/bookworm/opensearch/config/single-node/opensearch-security/: internal_users.yml
lxc/bookworm/opensearch/mount/scripts/: config.yml  configure_single_node.sh  opensearch.yml  opensearch_build.sh
lxc/bookworm/postgres/: build.sh  test.py  test_build.py
lxc/bookworm/postgres/mount/scripts/: postgres_build.sh
lxc/bookworm/rabbitmq/: build.sh  rabbitmq_environment.conf  test_build.py
lxc/bookworm/rabbitmq/mount/scripts/: rabbitmq_build.sh
lxc/bookworm/utils/: build_gosu.sh  gen_xkcd_secret.py
lxc/postgres/: build.sh  build2.sh  build3.sh  build4.sh
notes/: app.txt  assets.txt  invenio_cli.drawio  opensearch_client.drawio  opensearch_config.drawio  opensearch_config.txt
